# tinysegmenterxx

./: AUTHORS  COPYING  Makefile.am  Makefile.in  config.h.in  configure  configure.in
src/: Makefile.am  Makefile.in  segmenterxx.cpp  segmenterxxtest.cpp  tinysegmenterxx.hpp  tinysegmenterxx_train.hpp
tools/: make_train_file.pl  train  train.gperf  train.hpp
